--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -39,6 +39,12 @@ COMMAND_LINE_2=\
   ${path.separator}ext${file.separator}jboss-profiler-jvmti.jar${path.separator}ext${file.separator}jboss-logging-spi.jar\
   ${path.separator}tests${file.separator}build${file.separator}classes${file.separator}\
   ${path.separator}dbdrivers${file.separator}selected_dbdriver${file.separator}*\
+  ${path.separator}dbdrivers${file.separator}DB2_v9.7${file.separator}db2jcc.jar\
+  ${path.separator}dbdrivers${file.separator}jConnect-6_0${file.separator}classes${file.separator}jconn3.jar\
+  ${path.separator}dbdrivers${file.separator}mssql2005_sqljdbc_2.0${file.separator}enu${file.separator}sqljdbc4.jar\
+  ${path.separator}dbdrivers${file.separator}mysql-connector-java-5.1.8-bin.jar\
+  ${path.separator}dbdrivers${file.separator}oracle_10_2_0_4${file.separator}ojdbc14.jar\
+  ${path.separator}dbdrivers${file.separator}postgresql-8.3-605.jdbc4.jar\
   ${path.separator}..${file.separator}build${file.separator}extlib${file.separator}emma.jar\
   ${path.separator}..${file.separator}build${file.separator}extlib${file.separator}netty.jar
 
@@ -74,7 +80,6 @@ COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=120
 #
 #COMMAND_LINE_14=-Xdebug
 #COMMAND_LINE_15=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
-
 
 #
 # task arg properties substitutions - you probably don't need to mess with these.
