--- a/STM/pom.xml
+++ b/STM/pom.xml
@@ -43,6 +43,12 @@
       <artifactId>jboss-logging</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.3.168</version>
+      <scope>test</scope>
+    </dependency>
     
   </dependencies>
 </project>
