--- a/rest-tx/util/pom.xml
+++ b/rest-tx/util/pom.xml
@@ -54,6 +54,11 @@
   </repositories>
   <dependencies>
     <dependency>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <artifactId>arjunacore</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.15</version>
