--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ target
 *.iml
 .idea
 jboss-as
+qa/ObjectStore
+qa/PutObjectStoreDirHere
+qa/testoutput
+qa/transaction.log.1
+qa/transaction.log.2
+qa/value_1
+qa/value_2
+
