--- a/rest-tx/tx/pom.xml
+++ b/rest-tx/tx/pom.xml
@@ -23,7 +23,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>rest-tx-api</artifactId>
+  <artifactId>restat-api</artifactId>
   <packaging>jar</packaging>
   <name>RESTful API for Atomic Transactions</name>
   <description>Provides Transactions for web applications</description>
