--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -114,7 +114,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
-            <artifactId>rest-tx-api</artifactId>
+            <artifactId>restat-util</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
