JBTM-1237 Add a multiplier for increasing timeouts on slow machines

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -62,6 +62,8 @@ COMMAND_LINE_10=-DCoordinatorEnvironmentBean.maintainHeuristics=NO
 # so setting a short periodicRecoveryPeriod is no longer useful.
 #COMMAND_LINE_11=-DRecoveryEnvironmentBean.periodicRecoveryPeriod=10
 COMMAND_LINE_11=-DRecoveryEnvironmentBean.recoveryBackoffPeriod=5
+#timeoutFactor is a multiplier by which delays are multiplied - set to a larger value on slow servers
+COMMAND_LINE_12=-DCoreEnvironmentBean.timeoutFactor=1
 # uncomment to test with the JDK orb
 #COMMAND_LINE_12=-Dcom.sun.CORBA.POA.ORBServerId=1
 #
