JBTM-1245 update to 4.17.0.Final-SNAPSHOT

--- a/ArjunaCore/arjunacore/pom.xml
+++ b/ArjunaCore/arjunacore/pom.xml
@@ -13,9 +13,9 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.narayana.arjunacore</groupId>
+    <groupId>org.jboss.jbossts.arjunacore</groupId>
     <artifactId>arjunacore-all</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -121,9 +121,9 @@
               <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
               <artifactSet>
                 <includes>
-                  <include>org.jboss.narayana:common</include>
-                  <include>org.jboss.narayana.arjunacore:arjuna</include>
-                  <include>org.jboss.narayana.arjunacore:txoj</include>
+                  <include>org.jboss.jbossts:common</include>
+                  <include>org.jboss.jbossts.arjunacore:arjuna</include>
+                  <include>org.jboss.jbossts.arjunacore:txoj</include>
                 </includes>
               </artifactSet>
             </configuration>
@@ -134,15 +134,15 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.narayana</groupId>
+      <groupId>org.jboss.jbossts</groupId>
       <artifactId>common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <groupId>org.jboss.jbossts.arjunacore</groupId>
       <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <groupId>org.jboss.jbossts.arjunacore</groupId>
       <artifactId>txoj</artifactId>
     </dependency>
     <dependency>
