--- a/ArjunaJTS/idl/pom.xml
+++ b/ArjunaJTS/idl/pom.xml
@@ -13,9 +13,9 @@
 		if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2012, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
   <parent>
-    <groupId>org.jboss.narayana.jts</groupId>
+    <groupId>org.jboss.jbossts.jts</groupId>
     <artifactId>narayana-jts-all</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
