--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -13,9 +13,9 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.narayana.jts</groupId>
+    <groupId>org.jboss.jbossts.jts</groupId>
     <artifactId>narayana-jts-all</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -82,8 +82,8 @@
                   <exclude>**/PropertyInitTest3.java</exclude>
                 </excludes>
                 <classpathDependencyExcludes>
-                  <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl</classpathDependencyExcludes>
-                  <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl:test-jar</classpathDependencyExcludes>
+                  <classpathDependencyExcludes>org.jboss.jbossts.jts:idlj-idl</classpathDependencyExcludes>
+                  <classpathDependencyExcludes>org.jboss.jbossts.jts:idlj-idl:test-jar</classpathDependencyExcludes>
                 </classpathDependencyExcludes>
               </configuration>
             </execution>
@@ -113,8 +113,8 @@
                 </excludes>
                 <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.jbossts.jts:jacorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.jbossts.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
 
                   <systemPropertyVariables combine.children="append">
@@ -131,11 +131,11 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.narayana</groupId>
+      <groupId>org.jboss.jbossts</groupId>
       <artifactId>common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <groupId>org.jboss.jbossts.arjunacore</groupId>
       <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
@@ -145,21 +145,21 @@
     </dependency>
     <!-- pull in IDL stubs for each supported ORB (JacORB and Sun) -->
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
+      <groupId>org.jboss.jbossts.jts</groupId>
       <artifactId>jacorb-idl</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
+      <groupId>org.jboss.jbossts.jts</groupId>
       <artifactId>jacorb-idl</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
+      <groupId>org.jboss.jbossts.jts</groupId>
       <artifactId>idlj-idl</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
+      <groupId>org.jboss.jbossts.jts</groupId>
       <artifactId>idlj-idl</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
