--- a/STM/pom.xml
+++ b/STM/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.jboss.narayana</groupId>
+    <groupId>org.jboss.jbossts</groupId>
     <artifactId>narayana-all</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <groupId>org.jboss.narayana.stm</groupId>
+  <groupId>org.jboss.jbossts.stm</groupId>
   <artifactId>core</artifactId>
   <name>core</name>
   <url>http://maven.apache.org</url>
@@ -18,15 +18,15 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana</groupId>
+      <groupId>org.jboss.jbossts</groupId>
       <artifactId>common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <groupId>org.jboss.jbossts.arjunacore</groupId>
       <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <groupId>org.jboss.jbossts.arjunacore</groupId>
       <artifactId>txoj</artifactId>
     </dependency>
 <!--    <dependency>
