--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -13,9 +13,9 @@
 		if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
 		Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
   <parent>
-    <groupId>org.jboss.narayana</groupId>
+    <groupId>org.jboss.jbossts</groupId>
     <artifactId>narayana-all</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.0.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -59,97 +59,97 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <groupId>org.jboss.jbossts.arjunacore</groupId>
       <artifactId>arjunacore-services</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jta</groupId>
+      <groupId>org.jboss.jbossts.jta</groupId>
       <artifactId>narayana-jta</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jta</groupId>
+      <groupId>org.jboss.jbossts.jta</groupId>
       <artifactId>narayana-jta</artifactId>
       <classifier>javadoc</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-jacorb</artifactId>
+      <groupId>org.jboss.jbossts.jts</groupId>
+      <artifactId>jbossjts-jacorb</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-idlj</artifactId>
+      <groupId>org.jboss.jbossts.jts</groupId>
+      <artifactId>jbossjts-idlj</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
+      <groupId>org.jboss.jbossts.jts</groupId>
       <artifactId>idlj-idl</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-jacorb</artifactId>
+      <groupId>org.jboss.jbossts.jts</groupId>
+      <artifactId>jbossjts-jacorb</artifactId>
       <classifier>javadoc</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-integration</artifactId>
+      <groupId>org.jboss.jbossts.jts</groupId>
+      <artifactId>jbossjts-integration</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.rts</groupId>
+      <groupId>org.jboss.jbossts.rts</groupId>
       <artifactId>restat-web</artifactId>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.rts</groupId>
+      <groupId>org.jboss.jbossts.rts</groupId>
       <artifactId>restat-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.rts</groupId>
+      <groupId>org.jboss.jbossts.rts</groupId>
       <artifactId>restat-api</artifactId>
       <classifier>javadoc</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>jbossxts</artifactId>
       <classifier>api</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>jbossxts</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>jbossxts</artifactId>
       <classifier>javadoc</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>ws-c11</artifactId>
       <classifier>war</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>client</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>coordinator</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>participant</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.xts</groupId>
+      <groupId>org.jboss.jbossts.xts</groupId>
       <artifactId>xts-test-servlet</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana</groupId>
+      <groupId>org.jboss.jbossts</groupId>
       <artifactId>jbosstxbridge</artifactId>
     </dependency>
 
